--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ai": "^4.3.16",
     "cli-progress": "^3.12.0",
     "ink": "^6.0.0",
+    "ink-text-input": "6.0.0",
     "react": "^19.1.0",
     "ts-node": "^10.9.2"
   },
