--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
     "@ai-sdk/xai": "^1.2.16",
     "@ai-sdk/openai": "^1.3.22",
     "ai": "^4.3.16",
+    "ink": "^6.0.0",
+    "react": "^18.2.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@types/react": "^18.2.77",
+    "tsx": "^4.7.0",
     "prettier": "^3.3.0",
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "start": "tsx cli.tsx"
   }
 }
