--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "@ai-sdk/openai": "^1.3.22",
     "ai": "^4.3.16",
     "ink": "^6.0.0",
+    "ink-select-input": "^6.2.0",
+    "ink-text-input": "^6.0.0",
     "react": "^18.2.0",
     "ts-node": "^10.9.2"
   },
