--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ink": "^6.0.0",
     "ink-select-input": "^6.2.0",
     "ink-text-input": "^6.0.0",
+    "ink-spinner": "^5.0.0",
     "react": "^18.2.0",
     "ts-node": "^10.9.2"
   },
