--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ink-text-input": "^6.0.0",
     "ink-spinner": "^5.0.0",
     "react": "^18.2.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "yaml": "^2.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
